# libcamlite

./: CMakeLists.txt  README.md
src/: detection.hpp  libcamlite.cpp  libcamlite.hpp  post_proc.cpp  post_proc.hpp  stream_info.cpp  stream_info.hpp  vid_test.cpp  yuv.cpp  yuv.hpp
